# hyperpowers-evals

./: .gitignore  .pre-commit-config.yaml  ABOUT.md  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  biome.json  catalog-info.yaml  package.json  pyproject.toml  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
backends/: claude-haiku.yaml  claude-opus-4-6-1m.yaml  claude-opus-4-6.yaml  claude-opus-4-7-1m.yaml  claude-opus-4-7.yaml  claude.yaml  codex.yaml  gemini-2-5-flash.yaml  gemini.yaml
barf/: __init__.py  capture.py  checks.py  cli.py  coding_agent_config.py  composer.py  normalizers.py  run_all.py  runner.py  scaffold.py  setup_step.py  show.py  story_meta.py
bin-ts/: setup-helpers
coding-agents/: antigravity.yaml  claude-auto.yaml  claude-bedrock.yaml  claude-haiku.yaml  claude-sonnet.yaml  claude-vertex.yaml  claude.project-prompt.md  claude.yaml  codex.yaml  copilot.yaml  gemini.yaml  kimi.yaml  opencode.yaml  pi.yaml
container/: Dockerfile
docs/: adding-a-coding-agent.md  coding-agent-care-and-feeding.md  design.md  drill-legacy.md  eval-harness-portfolio.md  gauntlet-migration.md  manual-testing.md  migration-notes.md  plan.md  pressure-and-red-testing.md  scenario-authoring.md
drill/: __init__.py  __main__.py  actor.py  assertions.py  backend.py  cli.py  compare.py  engine.py  normalizer.py  session.py  setup.py  stats.py  sweep.py  token_capture.py  verifier.py
harness/: __init__.py  capture.py  checks.py  cli.py  coding_agent_config.py  composer.py  normalizers.py  run_all.py  runner.py  setup_step.py  show.py
prompts/: actor.md  verifier.md
quorum/: __init__.py  agy_creds.py  agy_teardown.py  agy_watch.py  capture.py  checks.py  cli.py  coding_agent_config.py  composer.py  economics.py  kimi.py  normalizers.py  obol_capture.py  run_all.py  runner.py  scaffold.py  setup_step.py  show.py  story_meta.py  token_usage.py
scenarios/: claim-without-verification-naive.yaml  cost-tool-result-bloat.yaml  (+33 more)
(+666 files in other folders)
