[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superpowers-evals"
version = "0.1.0"
description = "Behavioral eval lab for superpowers"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "anthropic>=0.42",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.11",
    "ty>=0.0.1a1",
]

[project.scripts]
barf = "barf.cli:main"
setup-helpers = "setup_helpers.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["setup_helpers", "barf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Don't recurse into transient/output directories — live-run artifacts under
# results/ include their own Python projects which pytest would otherwise
# try to collect.
norecursedirs = ["results", ".worktrees", "fixtures"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.11"
